Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-6461

mysqld should not trap SIGTSTP if running with --gdb/--debug-gdb

    XMLWordPrintable

Details

    Description

      I sometimes run mysqld directly in the console for debugging purposes and it would be very convenient if I could use Ctrl-Z in my shell to stop mysqld and engage my shell's job management after mysqld is started.

      Are there any objections to or problems with incorporating sigaddset(&set,SIGTSTP) in mysqld.cc into the tests for TEST_SIGINT so that SIGTSTP isn't trapped by mysqld?

      Attachments

        Activity

          People

            serg Sergei Golubchik
            kolbe Kolbe Kegel (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 5m
                5m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.