MDEV-6461 mysqld should not trap SIGTSTP if running with --gdb/--debug-gdb